# apple-health-importer

./: .gitignore  Apple Health Ultimate Dashboard.json  CLAUDE.md  COLOR_SCHEMES_GUIDE.md  CUSTOMIZATION_SUMMARY.md  DASHBOARD_DATA_ISSUES_RESOLVED.md  DASHBOARD_IMPORT_GUIDE.md  DASHBOARD_VERSIONS_COMPARISON.md  FINAL_DASHBOARD_GUIDE.md  FINAL_IMPORT_READY.md  GRAFANA_DASHBOARD_UPGRADE.md  LICENSE  README.md  READY_TO_IMPORT.md  SECURITY.md  ULTIMATE_DASHBOARD_GUIDE.md  apple_health_importer.py  clean_database.py  clean_database_auto.py  config.yaml.example  config_manager.py  create_fixed_sleep_panel.py  create_ultimate_dashboard.py  customize_dashboard.py  data_validator.py  debug_influxdb_data.py  final_dashboard_fix.py  fix_color_schemes.py  fix_dashboard_field_mapping.py  fix_dashboard_panels.py  fix_dashboard_time_windows.py  fix_datasource_uid.py  grafana_dashboard.json  grafana_dashboard_comprehensive.json  grafana_dashboard_customized.json  grafana_dashboard_final.json  grafana_dashboard_fixed.json  grafana_dashboard_ultimate.json  grafana_dashboard_ultimate_final.json  grafana_dashboard_ultimate_fixed_ds.json  (+21 more)
.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
.claude/checkpoints/: 1756103234.json  1756106743.json  1756106748.json  1756106770.json  1756106772.json  1756108731.json  1756108732.json  1756108742.json  1756108744.json  1756108758.json  1756108759.json  1756108773.json  1756108774.json  1756109297.json  1756109298.json  1756109307.json  1756109309.json  1756109319.json  1756109321.json  1756109372.json  1756109373.json  1756109450.json  1756109452.json  1756109471.json  1756109472.json  1756111325.json  1756111326.json  summary-session-20250825-092945.md  summary-session-20250825-094000.md  summary-session-20250825-095127.md  summary-session-20250825-100009.md  summary-session-20250825-100736.md  summary-session-20250825-100952.md  summary-session-20250825-101352.md  summary-session-20250825-101937.md  summary-session-20250825-102400.md  summary-session-20250825-102630.md  summary-session-20250825-103122.md  summary-session-20250825-103601.md  summary-session-20250825-104236.md  (+38 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.swarm/: memory.db
config/: measurements_config.yaml  measurements_config_comprehensive.yaml
docs/: quick_fix_sleep_query.md  security_improvements.md  sleep_data_analysis.md
memory/agents/: README.md
memory/sessions/: README.md
scripts/: secure_deploy.sh
src/apple_health_importer/: __init__.py  main.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
(+12 files in other folders)
