[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apple-health-importer"
version = "1.0.0"
description = "Import Apple Health data to InfluxDB with comprehensive validation and processing"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Mikko Mäkipää", email = "mikko.makipaa@example.com"},
]
keywords = ["health", "apple", "influxdb", "data", "import"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "influxdb>=5.3.1",
    "PyYAML>=6.0",
    "pytz>=2021.3",
    "tqdm>=4.62.3",
    "requests>=2.25.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "flake8",
    "black",
    "mypy",
    "pre-commit",
]

[project.urls]
Homepage = "https://github.com/mikkomakipaa/apple-health-importer"
Documentation = "https://github.com/mikkomakipaa/apple-health-importer/docs"
Repository = "https://github.com/mikkomakipaa/apple-health-importer.git"
"Bug Tracker" = "https://github.com/mikkomakipaa/apple-health-importer/issues"

[project.scripts]
apple-health-importer = "apple_health_importer.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src/apple_health_importer",
    "--cov-report=term-missing",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]